# fantastic-train

./: BECDecoder.cpp  BECDecoder.hpp  BEChannel.cpp  BEChannel.hpp  CMakeLists.txt  ChannelModels.hpp  Codewords.hpp  EdgeList.cpp  EdgeList.hpp  EdgeListClassExceptions.hpp  FantasticTrain.cpp  FantasticTrain.hpp  FantasticTrainExceptions.hpp  FantasticTrainMainFunctions.cpp  FantasticTrainMainFunctions.hpp  MatrixFileExceptions.hpp  MatrixFileFunctions.cpp  MatrixFileFunctions.hpp  Modulators.cpp  Modulators.hpp  StringFunctions.cpp  StringFunctions.hpp  VectorTypes.hpp  VectorUtilities.hpp  fantastic-train-config.hpp.in  main.cpp  main.hpp  todo.txt
InpOpts/InpOpts/: InpOptsClass.cpp  InpOptsClass.hpp  InpOptsValueNumeric.hpp  InpOptsValueString.hpp
misc/: config.txt  edge_list.txt
